examples/tests.byte
fn greet() {
    print("Hello User!")
}

fn add_nums(int a, int b) -> int {
    return a + b
}

fn print_num_with_threshold(int x, int threshold) {
    if x < threshold { return }
    
    print(x.to_string())
}

fn int.magnitude(mut int x) -> int {
    mut mag = 0
    while x > 1000 {
        x /= 1000
        mag += 1
    }
    
    return mag
}

fn main() -> int {
    x = 3
    // x = 6 // error: 'x' is immutable
    print(x.to_string())
    
    mut y = 5
    y = 10
    print(y.to_string())
    
    y += 5
    y *= 2
    print(y.to_string())
    
    mut i = 0
    while i < 500000 {
        if i == 5 {
            break
        }
        
        print(i.to_string())
        i += 1
    }
    
    greet()
    print(add_nums(x, y).to_string())
    
    z = 8000000
    print(z.magnitude().to_string())
    
    threshold = 1000
    print_num_with_threshold(z, threshold)
    print_num_with_threshold(x, threshold)
    
    print((z if z > y else y).to_string())
    print(Math.max(y, z).to_string())
    return 0
}
